==> mbrossard/DAPLink/source/hic_hal/nordic/shared/usbd_nRF528xx.c <==
#include <string.h>
#include "usb.h"
#include <RTL.h>
#include "rl_usb.h"
#include "nrf.h"                        /* Device header */
#include "nrfx.h"
#include "nrfx_usbd.h"
#include "nrf52_erratas.h"
#define  __NO_USB_LIB_C
#include "usb_config.c"
#define USBD_EP_NUM_MAX                 (8)

void USBD_Init (void) {

#ifdef __RTX
  os_mut_init(&usbd_hw_mutex);
#endif

  nrfx_usbd_enable();
#if NRF_POWER_HAS_USBREG

  struct nrfx_power_usbevt_config_t usbevt_config = {
    .handler = usbevt_handler,
  };
  nrfx_power_usbevt_init(&usbevt_config);
  while(!usbreg_ready) {}
#endif

  nrfx_usbd_start(true);
}

void USBD_Connect (BOOL con) {
#else
void USBD_Connect (uint32_t con) {
#endif
  if (con != 0U) {                      /* Connect */
    NRF_USBD->USBPULLUP |=  USBD_USBPULLUP_CONNECT_Msk;
  } else {                              /* Disconnect */
    NRF_USBD->USBPULLUP &= ~USBD_USBPULLUP_CONNECT_Msk;
  }
}


/*
 *  USB Device Reset Function
 *   Called automatically on USB Device Reset
 *    Return Value:    None
 */

void USBD_Reset (void) {

  /* Disable interrupts */
  NRF_USBD->INTENCLR = 0xFFFFFFFFU;

  /* Clear variables */
  setup_packet_available = 0U;
  ep0_dir = 1U;
  memset(ep_config, 0, sizeof(ep_config));

  /* Endpoint 0 is ready for SETUP packet reception when USB is ENABLED,
     set maximum packet size to 8 bytes */
  ep_config[0][0].max_packet_size = USBD_MAX_PACKET0;
  ep_config[1][0].max_packet_size = USBD_MAX_PACKET0;

  /* Enable relevant interrupts (USB Reset and Control Endpoint 0) */
  NRF_USBD->INTENSET = USBD_INTEN_USBRESET_Msk    | 
                       USBD_INTEN_EPDATA_Msk      | 
                       USBD_INTEN_EP0SETUP_Msk    | 
                       USBD_INTEN_SOF_Msk         |
                       USBD_INTEN_EP0DATADONE_Msk ;
}


/*
 *  USB Device Suspend Function
 *   Called automatically on USB Device Suspend
 *    Return Value:    None
 */

void USBD_Suspend (void) {
  /* Performed by Hardware */
}


/*
 *  USB Device Resume Function
 *   Called automatically on USB Device Resume
 *    Return Value:    None
 */

void USBD_Resume (void) {
  /* Performed by Hardware */
}


/*
 *  USB Device Remote Wakeup Function
 *   Called automatically on USB Device Remote Wakeup
 *    Return Value:    None
 */

void USBD_WakeUp (void) {
  NRF_USBD->LOWPOWER        = USBD_LOWPOWER_LOWPOWER_ForceNormal;
  NRF_USBD->DPDMVALUE       = USBD_DPDMVALUE_STATE_Resume;
  NRF_USBD->TASKS_DPDMDRIVE = USBD_TASKS_DPDMDRIVE_TASKS_DPDMDRIVE_Trigger;
}


/*
 *  USB Device Remote Wakeup Configuration Function
 *    Parameters:      cfg:   Device Enable/Disable
 *    Return Value:    None
 */

#ifdef   __DAPLINK
void USBD_WakeUpCfg (BOOL cfg) {
#else
void USBD_WakeUpCfg (uint32_t cfg) {
#endif
  /* Not needed */
}


/*
 *  USB Device Set Address Function
 *    Parameters:      adr:   USB Device Address
 *    Return Value:    None
 */

void USBD_SetAddress (uint32_t adr, uint32_t setup) {
  /* Performed by Hardware */
}


/*
 *  USB Device Configure Function
 *    Parameters:      cfg:   Device Configure/Deconfigure
 *    Return Value:    None
 */
#ifdef   __DAPLINK
void USBD_Configure (BOOL cfg) {
#else
void USBD_Configure (uint32_t cfg) {
#endif
  /* Not needed */
}


/*
 *  Configure USB Device Endpoint according to Descriptor
 *    Parameters:      pEPD:  Pointer to Device Endpoint Descriptor
 *    Return Value:    None
 */

void USBD_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD) {
  uint8_t  ep_dir, ep_num, ep_type;
  uint16_t ep_max_len;

  ep_dir     = (pEPD->bEndpointAddress &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num     =  pEPD->bEndpointAddress & ~USB_ENDPOINT_DIRECTION_MASK;
  ep_type    =  pEPD->bmAttributes & USB_ENDPOINT_TYPE_MASK;
  ep_max_len =  pEPD->wMaxPacketSize;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return;
  }
  if (ep_type == USB_ENDPOINT_TYPE_ISOCHRONOUS) {
    /* Isochronous Endpoint is not supported */
    return;
  }

  if (ep_max_len > 64U) {
    ep_max_len = 64U;                   /* Maximum packet size is 64 */
  }

  /* Store maximum packet size information into ep_config */
  ep_config[ep_dir][ep_num].max_packet_size = ep_max_len;
}


/*
 *  Set Direction for USB Device Control Endpoint
 *    Parameters:      dir:   Out (dir == 0), In (dir <> 0)
 *    Return Value:    None
 */

void USBD_DirCtrlEP (uint32_t dir) {
  if (dir == 0U) {
    ep0_dir = 0U;
  } else {
    ep0_dir = 1U;
  }
}


/*
 *  Enable USB Device Endpoint
 *    Parameters:      EPNum: Device Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *    Return Value:    None
 */

void USBD_EnableEP (uint32_t EPNum) {
  uint8_t  ep_dir, ep_num;

  ep_dir = (EPNum &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num =  EPNum & ~USB_ENDPOINT_DIRECTION_MASK;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return;
  }

  if (ep_dir != 0U) {                   /* If IN endpoint */
    /* Enable Endpoint */
    NRF_USBD->EPINEN  |= USBD_EPINEN_IN0_Msk     << ep_num;
  } else {                              /* If OUT endpoint */
    /* Enable Endpoint */
    NRF_USBD->EPOUTEN |= USBD_EPOUTEN_OUT0_Msk    << ep_num;
  }
}


/*
 *  Disable USB Device Endpoint
 *    Parameters:      EPNum: Device Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *    Return Value:    None
 */

void USBD_DisableEP (uint32_t EPNum) {
  uint8_t  ep_dir, ep_num;

  ep_dir = (EPNum &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num =  EPNum & ~USB_ENDPOINT_DIRECTION_MASK;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return;
  }

  if (ep_dir != 0U) {                   /* If IN endpoint */
    /* Disable Endpoint interrupt */
    NRF_USBD->INTENCLR = USBD_INTEN_ENDEPIN0_Msk << ep_num;

    /* Disable Endpoint */
    NRF_USBD->EPINEN  &= ~(USBD_EPINEN_IN0_Msk   << ep_num);
  } else {                              /* If OUT endpoint */
    /* Disable Endpoint interrupt */
    NRF_USBD->INTENCLR = USBD_INTEN_ENDEPIN0_Msk << ep_num;

    /* Disable Endpoint */
    NRF_USBD->EPINEN  &= ~(USBD_EPOUTEN_OUT0_Msk << ep_num);
  }
}


/*
 *  Reset USB Device Endpoint
 *    Parameters:      EPNum: Device Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *    Return Value:    None
 */

void USBD_ResetEP (uint32_t EPNum) {
  uint8_t  ep_dir, ep_num;

  ep_dir = (EPNum &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num =  EPNum & ~USB_ENDPOINT_DIRECTION_MASK;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return;
  }

  /* Reset data toggle to DATA0 */
  if (ep_num != 0U) {
    if (ep_dir != 0U) {                   /* If IN endpoint */
      NRF_USBD->DTOGGLE = ((USBD_DTOGGLE_VALUE_Nop   << USBD_DTOGGLE_VALUE_Pos) & USBD_DTOGGLE_VALUE_Msk) | ep_num | USBD_DTOGGLE_IO_Msk;
      NRF_USBD->DTOGGLE = ((USBD_DTOGGLE_VALUE_Data0 << USBD_DTOGGLE_VALUE_Pos) & USBD_DTOGGLE_VALUE_Msk) | ep_num | USBD_DTOGGLE_IO_Msk;
    } else {                              /* If OUT endpoint */
      NRF_USBD->DTOGGLE = ((USBD_DTOGGLE_VALUE_Nop   << USBD_DTOGGLE_VALUE_Pos) & USBD_DTOGGLE_VALUE_Msk) | ep_num;
      NRF_USBD->DTOGGLE = ((USBD_DTOGGLE_VALUE_Data0 << USBD_DTOGGLE_VALUE_Pos) & USBD_DTOGGLE_VALUE_Msk) | ep_num;
    }
  }

  if (ep_dir ==0U) {
    /* Start OUT transfer (Receive data to USB controller's internal buffer) */
    NRF_USBD->SIZE.EPOUT[ep_num] = 0U;
  }
}


/*
 *  Set Stall for USB Device Endpoint
 *    Parameters:      EPNum: Device Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *    Return Value:    None
 */

void USBD_SetStallEP (uint32_t EPNum) {
  uint8_t  ep_dir, ep_num;

  ep_dir = (EPNum &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num =  EPNum & ~USB_ENDPOINT_DIRECTION_MASK;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return;
  }

  if (ep_num == 0U) {                   /* If Control Endpoint 0 */
    NRF_USBD->TASKS_EP0STALL = USBD_TASKS_EP0STALL_TASKS_EP0STALL_Trigger;
  } else {                              /* If any other Endpoint */
    /* Set stall */
    if (ep_dir != 0U) {                 /* If IN endpoint */
      NRF_USBD->EPSTALL = USBD_EPSTALL_STALL_Msk | ep_num | USBD_EPSTALL_IO_Msk;
    } else {                            /* If OUT endpoint */
      NRF_USBD->EPSTALL = USBD_EPSTALL_STALL_Msk | ep_num;
    }
  }
}


/*
 *  Clear Stall for USB Device Endpoint
 *    Parameters:      EPNum: Device Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *    Return Value:    None
 */

void USBD_ClrStallEP (uint32_t EPNum) {
  uint8_t ep_dir, ep_num;

  ep_dir = (EPNum &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num =  EPNum & ~USB_ENDPOINT_DIRECTION_MASK;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return;
  }

  /* Clear stall */
  if (ep_dir != 0U) {                   /* If IN endpoint */
    NRF_USBD->EPSTALL = ep_num | USBD_EPSTALL_IO_Msk;
  } else {                              /* If OUT endpoint */
    NRF_USBD->EPSTALL = ep_num;
  }
  USBD_ResetEP(EPNum);
}


/*
 *  Clear USB Device Endpoint Buffer
 *    Parameters:      EPNum: Device Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *    Return Value:    None
 */

void USBD_ClearEPBuf (uint32_t EPNum) {
  /* Not needed */
}


/*
 *  Read USB Device Endpoint Data
 *    Parameters:      EPNum: Device Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *                     pData: Pointer to Data Buffer
 *    Return Value:    Number of bytes read
 */

#ifdef   __DAPLINK
uint32_t USBD_ReadEP (uint32_t EPNum, uint8_t *pData, U32 size) {
#else
uint32_t USBD_ReadEP (uint32_t EPNum, uint8_t *pData) {
#endif
  uint8_t  ep_dir, ep_num;
  uint16_t len;

  ep_dir = (EPNum &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num =  EPNum & ~USB_ENDPOINT_DIRECTION_MASK;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return 0U;
  }
  if (ep_dir != 0U) {                   /* If not OUT Endpoint */
    return 0U;
  }
  if ((ep_num == 0U) && (setup_packet_available == 0U) && (ep0_dir != 0)) {
    /* Status stage of Device-to-Host handled in USBD_WriteEP */
    /* Note - ep0_dir is set only after the setup packet has been read */
    return 0U;
  }

  if ((ep_num == 0U) && (setup_packet_available != 0U)) {
    uint16_t wlength;
    setup_packet_available = 0U;

    /* If reading Endpoint 0 and Setup Packet is available */
    pData[0] = NRF_USBD->BMREQUESTTYPE;
    pData[1] = NRF_USBD->BREQUEST;
    pData[2] = NRF_USBD->WVALUEL;
    pData[3] = NRF_USBD->WVALUEH;
    pData[4] = NRF_USBD->WINDEXL;
    pData[5] = NRF_USBD->WINDEXH;
    pData[6] = NRF_USBD->WLENGTHL;
    pData[7] = NRF_USBD->WLENGTHH;
    len = 8U;

    /* Start status stage immediately if there is no data stage */
    wlength = (pData[7] << 8) | (pData[6] << 0);
    if (wlength == 0) {
        ep0_no_data_stage = 1;
        NRF_USBD->TASKS_EP0STATUS = USBD_TASKS_EP0STATUS_TASKS_EP0STATUS_Trigger;
    } else {
        ep0_no_data_stage = 0;
    }
  } else if ((ep_num == 0U) && (ep0_no_data_stage != 0)) {
      /* There isn't a data stage so don't try to read data */
      len = 0;
  } else {
    len = NRF_USBD->SIZE.EPOUT[ep_num];

#ifdef   __DAPLINK
    if (len > size) {
      len = size;
    }
#endif

    /* Read received data from USB controller's internal buffer to ep_buf.
       ep_buf is used to satisfy required 32-bit alignment, and size multiple of 4. */
    usbd_dma(EPNum, &ep_buf[ep_dir][ep_num][0], ((len+3U)/4U)*4U);

    /* Copy data received to requested pData */
    memcpy((void *)pData, (const void *)&ep_buf[ep_dir][ep_num][0], len);

    /* Start the status stage if endpoint 0 */
    if (ep_num == 0U) {
        /* TODO - Only start the status stage after reading the last OUT packet.
            Until that is done control Host-To-Device transfers consisting
            of multiple OUT packets likely won't work. */
        NRF_USBD->TASKS_EP0STATUS = USBD_TASKS_EP0STATUS_TASKS_EP0STATUS_Trigger;
    }
  }

  /* Start OUT transfer (Receive data to USB controller's internal buffer) */
  NRF_USBD->SIZE.EPOUT[ep_num] = 0U;

  return len;
}


/*
 *  Write USB Device Endpoint Data
 *    Parameters:      EPNum: Endpoint Number
 *                       EPNum.0..3: Address
 *                       EPNum.7:    Dir
 *                     pData: Pointer to Data Buffer
 *                     cnt:   Number of bytes to write
 *    Return Value:    Number of bytes written
 */

uint32_t USBD_WriteEP (uint32_t EPNum, uint8_t *pData, uint32_t cnt) {
  uint8_t  ep_dir, ep_num;
  uint16_t len, ep_max_len;

  ep_dir     = (EPNum &  USB_ENDPOINT_DIRECTION_MASK) >> 7;
  ep_num     =  EPNum & ~USB_ENDPOINT_DIRECTION_MASK;
  len        =  cnt;

  if (ep_num >= USBD_EP_NUM_MAX) {      /* If ep_num is not available */
    return 0U;
  }
  if (ep_dir == 0U) {                   /* If not IN Endpoint */
    return 0U;
  }
  if ((ep_num == 0U) && (ep0_no_data_stage != 0)) {
    /* There isn't a data stage so don't try to write data */
    return 0U;
  }
  if ((ep_num == 0U) && (ep0_dir == 0)) {
    /* Status stage of Host-to-Device handled elsewhere */
    return 0U;
  }

  ep_max_len =  ep_config[ep_dir][ep_num].max_packet_size;

  if (len > ep_max_len) {
    len = ep_max_len;
  }

  /* If this is a short packet on endpoint 0 then it is the last packet
     of the transfer. Start the status stage after it is sent (the next IN event) */
  if ((ep_num == 0U) && (len < ep_max_len)) {
      ep0_status_next = 1U;
  }

  /* Copy data to be sent to ep_buf */
  memcpy((void *)&ep_buf[ep_dir][ep_num][0], (const void *)pData, len);

  /* Do DMA transfer of data from ep_buf to USB controller's internal buffer */
  usbd_dma(EPNum, &ep_buf[ep_dir][ep_num][0], len);

  /* After data is sent EP0DATADONE/EPDATA event will happen and be processed by IRQ */

  return len;
}


/*
 *  Get USB Device Last Frame Number
 *    Parameters:      None
 *    Return Value:    Frame Number
 */

uint32_t USBD_GetFrame (void) {
  return NRF_USBD->FRAMECNTR;
}


/*
 *  Get USB Device Last Error Code
 *    Parameters:      None
 *    Return Value:    Error Code
 */

uint32_t USBD_GetError (void) {
  return 0U;
}


/*
 *  USB Device Interrupt Service Routine
 */
#ifdef __DAPLINK
void USBD_IRQHandler (void) {
  NVIC_DisableIRQ(USBD_IRQn);
  USBD_SignalHandler();
}

void USBD_Handler (void) {
#else
void USBD_IRQHandler (void) {
#endif
  uint32_t eventcause, epdatastatus, ep_num;

  /* Check USB Reset event */
  if (NRF_USBD->EVENTS_USBRESET != 0U) {
    NRF_USBD->EVENTS_USBRESET = 0U;
    USBD_Reset();
    usbd_reset_core();
#ifdef __RTX
    if (USBD_RTX_DevTask) {
      isr_evt_set(USBD_EVT_RESET, USBD_RTX_DevTask);
    }
#else
    if (USBD_P_Reset_Event) {
      USBD_P_Reset_Event();
    }
#endif
  }

  /* Check USB Suspend/Resume events */
  if (NRF_USBD->EVENTS_USBEVENT != 0U) {
    eventcause = NRF_USBD->EVENTCAUSE;
    NRF_USBD->EVENTCAUSE      = 0U;
    NRF_USBD->EVENTS_USBEVENT = 0U;
    if ((eventcause & USBD_EVENTCAUSE_SUSPEND_Msk) != 0U) {
      USBD_Suspend();
#ifdef __RTX
      if (USBD_RTX_DevTask) {
        isr_evt_set(USBD_EVT_SUSPEND, USBD_RTX_DevTask);
      }
#else
      if (USBD_P_Suspend_Event) {
        USBD_P_Suspend_Event();
      }
#endif
    }
    if ((eventcause & USBD_EVENTCAUSE_RESUME_Msk) != 0U) {
      USBD_Resume();
#ifdef __RTX
      if (USBD_RTX_DevTask) {
        isr_evt_set(USBD_EVT_RESUME,  USBD_RTX_DevTask);
      }
#else
      if (USBD_P_Resume_Event) {
        USBD_P_Resume_Event();
      }
#endif
    }
  }

  /* Check USB SOF event */
  if (NRF_USBD->EVENTS_SOF != 0U) {
    NRF_USBD->EVENTS_SOF = 0U;
#ifdef __RTX
    if (USBD_RTX_DevTask) {
      isr_evt_set(USBD_EVT_SOF, USBD_RTX_DevTask);
    }
#else
    if (USBD_P_SOF_Event) {
      USBD_P_SOF_Event();
    }
#endif
  }

  /* Check Endpoint 0 Setup Packet received event */
  if (NRF_USBD->EVENTS_EP0SETUP != 0U) {
    setup_packet_available = 1U;
    ep0_status_next = 0U;
    NRF_USBD->EVENTS_EP0SETUP = 0U;
#ifdef __RTX
    if (USBD_RTX_EPTask[0]) {
      isr_evt_set(USBD_EVT_SETUP, USBD_RTX_EPTask[0]);
    }
#else
    if (USBD_P_EP[0]) {
      USBD_P_EP[0](USBD_EVT_SETUP);
    }
#endif
  }

  /* Check Endpoint 0 Data Packet sent/received event */
  if (NRF_USBD->EVENTS_EP0DATADONE != 0U) {
    uint32_t local_ep0_status_next = ep0_status_next;
    NRF_USBD->EVENTS_EP0DATADONE = 0U;
#ifdef __RTX
    if (USBD_RTX_EPTask[0]) {
      if (ep0_dir != 0U) {
        isr_evt_set(USBD_EVT_IN, USBD_RTX_EPTask[0]);
      } else {
        isr_evt_set(USBD_EVT_OUT, USBD_RTX_EPTask[0]);
      }
    }
#else
    if (USBD_P_EP[0]) {
      if (ep0_dir != 0U) {
        USBD_P_EP[0](USBD_EVT_IN);
      } else {
        USBD_P_EP[0](USBD_EVT_OUT);
      }
    }
#endif
    /* Enable Status stage */
    if (local_ep0_status_next) {
    NRF_USBD->TASKS_EP0STATUS = USBD_TASKS_EP0STATUS_TASKS_EP0STATUS_Trigger;
    }
  }

  /* Check Endpoint sent/received event */
  if (NRF_USBD->EVENTS_EPDATA != 0U) {
    epdatastatus = NRF_USBD->EPDATASTATUS;
    NRF_USBD->EVENTS_EPDATA = 0U;
    NRF_USBD->EPDATASTATUS  = epdatastatus;
    for (ep_num = 1U; ep_num < USBD_EP_NUM_MAX; ep_num++) {
      if ((epdatastatus & (1U << ep_num)) != 0U) {
#ifdef __RTX
        if (USBD_RTX_EPTask[ep_num]) {
          isr_evt_set(USBD_EVT_IN, USBD_RTX_EPTask[ep_num]);
        }
#else
        if (USBD_P_EP[ep_num]) {
          USBD_P_EP[ep_num](USBD_EVT_IN);
        }
#endif
      }
    }

    for (ep_num = 1U; ep_num < USBD_EP_NUM_MAX; ep_num++) {
      if ((epdatastatus & ((1U << 16) << ep_num)) != 0U) {
#ifdef __RTX
        if (USBD_RTX_EPTask[ep_num]) {
          isr_evt_set(USBD_EVT_OUT, USBD_RTX_EPTask[ep_num]);
        }
#else
        if (USBD_P_EP[ep_num]) {
          USBD_P_EP[ep_num](USBD_EVT_OUT);
        }
#endif
      }
    }
  }

#ifdef __DAPLINK
  NVIC_EnableIRQ(USBD_IRQn);
#endif
}
